# docfold

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml  tag-release.yml
docs/: CNAME  GPU_OCR_BENCHMARK_2026.md  PLAN_NUEXTRACT_INTEGRATION.md  RESEARCH_CHANDRA_OCR.md  RESEARCH_DOCUMENT_SEGMENTATION.md  RESEARCH_STRUCTURED_EXTRACTION_LIBRARIES.md  TASK_CHANDRA_ENGINE.md  TASK_SMART_ROUTER.md  benchmark_results.json  benchmarks.md  evaluation.md  index.html  install.md  llms.txt
docs/conventions/: golden-rules.md
docs/tasks/: AGENT_DISTRIBUTION.md  MARKITDOWN_ENGINE.md  MINERU_2X_UPGRADE.md  OPENDATALOADER_ENGINE.md  RAGFOLD_AGGREGATOR.md  UNLIMITED_OCR_ENGINE.md  _TEMPLATE.md
extractfold/: CHANGELOG.md  README.md  pyproject.toml
extractfold/.github/workflows/: ci.yml
extractfold/docs/conventions/: golden-rules.md
extractfold/docs/tasks/: _TEMPLATE.md  lift.md
extractfold/src/extractfold/: __init__.py
extractfold/src/extractfold/engines/: __init__.py  base.py  lift_engine.py  router.py
extractfold/src/extractfold/evaluation/: __init__.py  metrics.py
extractfold/tests/: test_base.py  test_metrics.py
extractfold/tests/engines/: test_lift_engine.py  test_router.py
src/docfold/: __init__.py  cli.py  install.py  mcp_server.py  update.py
src/docfold/engines/: __init__.py  azure_docint_engine.py  base.py  chandra_engine.py  docling_engine.py  docling_serve_engine.py  easyocr_engine.py  firecrawl_engine.py  google_docai_engine.py  liteparse_engine.py  llamaparse_engine.py  marker_engine.py  marker_local_engine.py  markitdown_engine.py  mineru_engine.py  mistral_ocr_engine.py  nougat_engine.py  ocr_engine.py  opendataloader_engine.py  paddleocr_engine.py  pymupdf_engine.py  router.py  surya_engine.py  tesseract_engine.py  textract_engine.py  unlimited_ocr_engine.py  unstructured_engine.py  zerox_engine.py
src/docfold/evaluation/: __init__.py  metrics.py  runner.py
src/docfold/preprocessing/: __init__.py  detector.py
src/docfold/utils/: __init__.py  pre_analysis.py  quality.py
tests/: test_cli.py  test_install.py  test_mcp_server.py  test_preprocessing.py  test_update.py
tests/engines/: test_adapters.py  test_base.py  test_batch.py  test_liteparse_engine.py  test_markitdown_engine.py  test_opendataloader_engine.py  test_router.py
tests/evaluation/: test_metrics.py  test_runner.py
tests/fixtures/fonts/: LICENSE.txt
tests/utils/: test_pre_analysis.py  test_quality.py
