[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extractfold"
version = "0.1.0"
description = "Turn any document into schema-conformant structured data. Unified interface over structured-data extraction engines with built-in evaluation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mihailorama", email = "mihailorama@gmail.com" },
]
keywords = [
    "structured-extraction",
    "document-extraction",
    "json-schema",
    "information-extraction",
    "pdf-extraction",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = []

[project.optional-dependencies]
lift = [
    # vLLM backend (default). Add the `hf` extra for the local HuggingFace backend.
    "lift-pdf>=0.1",
]
lift-hf = [
    "lift-pdf[hf]>=0.1",
]
evaluation = [
    "jsonschema>=4.0",
]
all = [
    "extractfold[lift,evaluation]",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "ruff>=0.4",
    "mypy>=1.8",
]
dev = [
    "extractfold[test]",
]

[project.urls]
Homepage = "https://github.com/mihailorama/extractfold"
Repository = "https://github.com/mihailorama/extractfold"
Issues = "https://github.com/mihailorama/extractfold/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/extractfold"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require engine dependencies installed",
    "slow: marks tests that take >30s",
    "gpu: marks tests that require GPU",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]
